same blog minor changes

--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -195,7 +195,7 @@
                                     styling.
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
-                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                <p class="paragraph small-paragraph margin-bottom-60px">
                                     Here’s the best part: you basically don’t. The overgrown buzz cut is extremely
                                     low-maintenance. What is important is keeping your hair and scalp clean. Use a
                                     high-quality shampoo regularly to wash away oils, sweat, and dirt. Lather CLEAN
@@ -204,20 +204,17 @@
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="about-section">
+                        <!-- Second try -->
                         <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
                             <div class="title-block padding-left-right-60">
-                                <!-- <div 
-                                    class="heading h4 margin-bottom-40px">Keratin and Hair Botox: What You Should Know
-                                    Before Choosing</div>
-                                <p 
-                                    class="paragraph small-paragraph margin-bottom-40px">
-                                    If you are dealing with frizz, dryness, or unmanageable hair, you have probably
-                                    heard about Keratin and Hair Botox treatments. While both aim to improve hair
-                                    quality, they serve very different purposes. Choosing the right one depends on your
-                                    hair condition, not trends.
-                                </p> -->
                                 <h2 class="heading h3 margin-bottom-20px">The Textured Crop</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
                                     2025 was all about texture. We think that trend is just getting started. The
@@ -227,27 +224,149 @@
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Casual and Professional looks. Clean yet textured look. Suitable for teens and
-                                    college going.
+                                    Casual and professional settings. Ideal for men who want a trendy haircut with
+                                    minimal daily styling.
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The beauty of the textured crop is how naturally it falls. All you need is Sea Salt
-                                    Spray to enhance that crunchy definition. Give your hair a few sprays, scrunch it in
-                                    with your hands, and you’re good to go. Texture powder can also be used. The messier
-                                    and more textured, the better.
+                                    Apply a small amount of matte clay or texture powder to dry or slightly damp hair.
+                                    Use fingers to create separation and natural movement. Avoid heavy products to keep
+                                    the look lightweight.
                                 </p>
                             </div>
+
+                        </div>
+                        <!-- Second try ends -->
+                        <div class="w-layout-grid _2-grids center-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
-                                        alt="Healthy hair care routine with shampoo and hair oil application"
-                                        style="opacity:0"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
                             </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">The Warrior Cut</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The warrior cut once popularized by Brad Pitt, is a bold, masculine hairstyle
+                                    defined by strong structure and controlled length. Inspired by rugged, confident
+                                    looks, this cut usually features shorter sides with a powerful, textured top. It
+                                    delivers a sharp appearance while still maintaining natural flow.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Men who prefer strong, edgy styles and confident grooming aesthetics.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Blow-dry the top for lift and structure. Finish with a medium-hold matte product to
+                                    enhance texture while keeping the look controlled throughout the day.
+                                </p>
+                            </div>
                         </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">Curly Hair Fade</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The curly hair fade is designed to highlight natural curls while keeping the sides
+                                    clean and sharp. The fade enhances contrast, allowing the curls on top to stand out
+                                    while maintaining a fresh and polished appearance.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Men with naturally curly or wavy hair who want a neat yet expressive hairstyle.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Use a curl-enhancing cream or light leave-in conditioner. Scrunch gently and allow
+                                    hair to air-dry or diffuse to maintain curl definition without frizz.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">The Textured Crop</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    2025 was all about texture. We think that trend is just getting started. The
+                                    textured crop continues to be a top choice for men who want a stylish yet
+                                    easy-to-maintain haircut. With choppy layers on top and a clean fade on the sides,
+                                    this style works well for straight and wavy hair.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Casual and professional settings. Ideal for men who want a trendy haircut with
+                                    minimal daily styling.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Apply a small amount of matte clay or texture powder to dry or slightly damp hair.
+                                    Use fingers to create separation and natural movement. Avoid heavy products to keep
+                                    the look lightweight.
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="about-section">
+                        <!-- <div class="w-layout-grid _2-grids center-grid">
+                            <div class="title-block padding-left-right-60">
+                                 <div 
+                                    class="heading h4 margin-bottom-40px">Keratin and Hair Botox: What You Should Know
+                                    Before Choosing</div>
+                                <p 
+                                    class="paragraph small-paragraph margin-bottom-40px">
+                                    If you are dealing with frizz, dryness, or unmanageable hair, you have probably
+                                    heard about Keratin and Hair Botox treatments. While both aim to improve hair
+                                    quality, they serve very different purposes. Choosing the right one depends on your
+                                    hair condition, not trends.
+                                </p> 
+                        <h2 class="heading h3 margin-bottom-20px">The Textured Crop</h2>
+                        <p class="paragraph small-paragraph margin-bottom-20px">
+                            2025 was all about texture. We think that trend is just getting started. The
+                            textured crop continues to be a top choice for men who want a stylish yet
+                            easy-to-maintain haircut. With choppy layers on top and a clean fade on the sides,
+                            this style works well for straight and wavy hair.
+                        </p>
+                        <h3 class="heading h5">Best For:</h3>
+                        <p class="paragraph small-paragraph margin-bottom-20px">
+                            Casual and Professional looks. Clean yet textured look. Suitable for teens and
+                            college going.
+                        </p>
+                        <h3 class="heading h5">How to Style:</h3>
+                        <p class="paragraph small-paragraph margin-bottom-20px">
+                            The beauty of the textured crop is how naturally it falls. All you need is Sea Salt
+                            Spray to enhance that crunchy definition. Give your hair a few sprays, scrunch it in
+                            with your hands, and you’re good to go. Texture powder can also be used. The messier
+                            and more textured, the better.
+                        </p>
+                    </div>
+                    <div class="blog-content grid-images-div">
+                        <div class="image-container"><img class="image portrait"
+                                src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                alt="Healthy hair care routine with shampoo and hair oil application" style="opacity:0"
+                                sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                        </div>
+                    </div>
+                </div> -->
                         <!-- CTA section inside -->
                         <div class="w-layout-grid _2-grids center-grid">
                             <div class="title-block padding-left-right-60">
@@ -261,6 +380,7 @@
                         </div>
                         <!-- CTA section ends -->
                     </div>
+
                 </div>
             </div>
         </div>
