haircut blog contents added

--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -303,26 +303,115 @@
                                 </div>
                             </div>
                             <div class="title-block padding-left-right-60">
-                                <h2 class="heading h3 margin-bottom-20px">The Textured Crop</h2>
+                                <h2 class="heading h3 margin-bottom-20px">The Tousled Wave</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    2025 was all about texture. We think that trend is just getting started. The
-                                    textured crop continues to be a top choice for men who want a stylish yet
-                                    easy-to-maintain haircut. With choppy layers on top and a clean fade on the sides,
-                                    this style works well for straight and wavy hair.
+                                    The tousled wave is a relaxed, natural hairstyle that embraces movement and texture. This cut focuses on medium length with soft layering, giving the hair a slightly messy but intentional finish that looks effortless.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Casual and professional settings. Ideal for men who want a trendy haircut with
-                                    minimal daily styling.
+                                    Casual wear and everyday styling. Ideal for men who prefer a laid-back appearance.
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Apply a small amount of matte clay or texture powder to dry or slightly damp hair.
-                                    Use fingers to create separation and natural movement. Avoid heavy products to keep
-                                    the look lightweight.
+                                    Apply sea salt spray to damp hair and scrunch lightly. Let it air-dry for a natural wave pattern, or use a diffuser for added volume.
                                 </p>
                             </div>
-
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">Burst Fade</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The burst fade is a standout haircut where the fade curves around the ear, creating a circular burst effect. It adds dimension and sharpness while allowing flexibility in styling the top.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Trend-focused men who want a modern and eye-catching haircut.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Style the top based on hair type—textured, curly, or slick. Use a lightweight styling product to maintain definition without overpowering the fade.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">The Flow</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The flow haircut is all about length, movement, and confidence. With longer layers swept back or to the side, this style delivers a natural, effortless look that continues to trend strongly in 2026.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Men with medium to long hair who prefer a relaxed, stylish appearance.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Use a light styling cream or leave-in conditioner. Comb back loosely or let hair fall naturally for a soft, flowing finish.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">Modern Taper Fade</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The modern taper fade offers a clean and refined look with subtle blending around the temples and neckline. Unlike sharp fades, this style delivers a more natural transition that suits both formal and casual environments.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Office professionals and men seeking a polished everyday haircut.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Apply a small amount of styling cream or pomade to the top. Keep the finish natural with minimal shine.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="w-layout-grid _2-grids center-grid">
+                            <div class="blog-content grid-images-div">
+                                <div class="image-container"><img class="image portrait"
+                                        src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
+                                        alt="Woman comparing hair breakage and hair fall concerns" style="opacity:0"
+                                        sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
+                                        data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
+                                </div>
+                            </div>
+                            <div class="title-block padding-left-right-60">
+                                <h2 class="heading h3 margin-bottom-20px">Mid Fade with Natural Top</h2>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    The mid fade with a natural top strikes a perfect balance between clean sides and relaxed styling. The fade starts midway on the head, keeping the look sharp while allowing the top to maintain natural texture and volume.
+                                </p>
+                                <h3 class="heading h5">Best For:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Men looking for a versatile haircut that suits most face shapes and hair types.
+                                </p>
+                                <h3 class="heading h5">How to Style:</h3>
+                                <p class="paragraph small-paragraph margin-bottom-20px">
+                                    Use a light matte product and style with fingers. Keep the top natural for a clean, modern finish.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="about-section">
