gaps between image and heading in blog content

--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -170,7 +170,7 @@
                             styling. Whether you prefer sharp fades or relaxed, effortless looks, these trending gents
                             haircuts are dominating salons right now.
                         </p>
-                        <div class="w-layout-grid _2-grids center-grid">
+                        <div class="w-layout-grid _2-grids center-grid no-gap-grid">
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/Buzz_Cut_5-_Anastasia.webp"
