--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -158,7 +158,9 @@
                         </nav>
                         <!-- BC section ends -->
                         <h1 class="heading h3 margin-bottom-40px">Latest Gents Haircuts That Are Trending Right Now</h1>
-                        <div class="paragraph small-paragraph subtitle dark-title-grey margin-top-20px">Written by</div>
+                        <div
+                            class="paragraph small-paragraph subtitle dark-title-grey margin-top-20px margin-bottom-20px">
+                            Written by</div>
                         <p class="dark-title paragraph margin-bottom-10px">
                             Mahina Sehrish <br> <span class="paragraph small-paragraph">Sugarcoat Salon,
                                 Bangalore</span>
