--- a/blogs/latest-gents-haircuts-trending.html
+++ b/blogs/latest-gents-haircuts-trending.html
@@ -167,7 +167,7 @@
                         </p>
                         <p class="paragraph small-paragraph margin-bottom-60px">
                             Date: 25 Jan 2026</p>
-                        <p class="paragraph medium-paragraph margin-bottom-20px">
+                        <p class="paragraph medium-paragraph margin-bottom-40px">
                             Men’s grooming in 2026 is all about clean structure, natural texture, and low-maintenance
                             styling. Whether you prefer sharp fades or relaxed, effortless looks, these trending gents
                             haircuts are dominating salons right now.
@@ -307,7 +307,9 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h3 margin-bottom-20px">The Tousled Wave</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The tousled wave is a relaxed, natural hairstyle that embraces movement and texture. This cut focuses on medium length with soft layering, giving the hair a slightly messy but intentional finish that looks effortless.
+                                    The tousled wave is a relaxed, natural hairstyle that embraces movement and texture.
+                                    This cut focuses on medium length with soft layering, giving the hair a slightly
+                                    messy but intentional finish that looks effortless.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
@@ -315,7 +317,8 @@
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Apply sea salt spray to damp hair and scrunch lightly. Let it air-dry for a natural wave pattern, or use a diffuser for added volume.
+                                    Apply sea salt spray to damp hair and scrunch lightly. Let it air-dry for a natural
+                                    wave pattern, or use a diffuser for added volume.
                                 </p>
                             </div>
                         </div>
@@ -331,7 +334,9 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h3 margin-bottom-20px">Burst Fade</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The burst fade is a standout haircut where the fade curves around the ear, creating a circular burst effect. It adds dimension and sharpness while allowing flexibility in styling the top.
+                                    The burst fade is a standout haircut where the fade curves around the ear, creating
+                                    a circular burst effect. It adds dimension and sharpness while allowing flexibility
+                                    in styling the top.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
@@ -339,7 +344,8 @@
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Style the top based on hair type—textured, curly, or slick. Use a lightweight styling product to maintain definition without overpowering the fade.
+                                    Style the top based on hair type—textured, curly, or slick. Use a lightweight
+                                    styling product to maintain definition without overpowering the fade.
                                 </p>
                             </div>
                         </div>
@@ -355,7 +361,9 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h3 margin-bottom-20px">The Flow</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The flow haircut is all about length, movement, and confidence. With longer layers swept back or to the side, this style delivers a natural, effortless look that continues to trend strongly in 2026.
+                                    The flow haircut is all about length, movement, and confidence. With longer layers
+                                    swept back or to the side, this style delivers a natural, effortless look that
+                                    continues to trend strongly in 2026.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
@@ -363,7 +371,8 @@
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Use a light styling cream or leave-in conditioner. Comb back loosely or let hair fall naturally for a soft, flowing finish.
+                                    Use a light styling cream or leave-in conditioner. Comb back loosely or let hair
+                                    fall naturally for a soft, flowing finish.
                                 </p>
                             </div>
                         </div>
@@ -379,7 +388,9 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h3 margin-bottom-20px">Modern Taper Fade</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The modern taper fade offers a clean and refined look with subtle blending around the temples and neckline. Unlike sharp fades, this style delivers a more natural transition that suits both formal and casual environments.
+                                    The modern taper fade offers a clean and refined look with subtle blending around
+                                    the temples and neckline. Unlike sharp fades, this style delivers a more natural
+                                    transition that suits both formal and casual environments.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
@@ -387,7 +398,8 @@
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Apply a small amount of styling cream or pomade to the top. Keep the finish natural with minimal shine.
+                                    Apply a small amount of styling cream or pomade to the top. Keep the finish natural
+                                    with minimal shine.
                                 </p>
                             </div>
                         </div>
@@ -403,7 +415,9 @@
                             <div class="title-block padding-left-right-60">
                                 <h2 class="heading h3 margin-bottom-20px">Mid Fade with Natural Top</h2>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    The mid fade with a natural top strikes a perfect balance between clean sides and relaxed styling. The fade starts midway on the head, keeping the look sharp while allowing the top to maintain natural texture and volume.
+                                    The mid fade with a natural top strikes a perfect balance between clean sides and
+                                    relaxed styling. The fade starts midway on the head, keeping the look sharp while
+                                    allowing the top to maintain natural texture and volume.
                                 </p>
                                 <h3 class="heading h5">Best For:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
@@ -411,7 +425,8 @@
                                 </p>
                                 <h3 class="heading h5">How to Style:</h3>
                                 <p class="paragraph small-paragraph margin-bottom-20px">
-                                    Use a light matte product and style with fingers. Keep the top natural for a clean, modern finish.
+                                    Use a light matte product and style with fingers. Keep the top natural for a clean,
+                                    modern finish.
                                 </p>
                             </div>
                         </div>
