last blog finished

--- a/blog.html
+++ b/blog.html
@@ -94,37 +94,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div id="hero" class="section hero-section">
-            <div class="w-layout-grid _2-grids _0-gap _100">
-                <div id="w-node-f52a1497-2735-f171-3c8d-6f49dfee458a-dc178eda" class="hero-content-block">
-                    <div class="title-block">
-
-                        <div data-w-id="57969e3e-7732-03f7-71c5-a896fb8c9bed" style="opacity:0"
-                            class="subtitle margin-bottom-40px">
-                            Hair • Nails • Makeup • Beauty
-                        </div>
-                        <div data-w-id="cac36006-9d1e-41cf-bc16-58a5ee13f35c" style="opacity:0"
-                            class="heading h1 text-white margin-bottom-40px">your look <br /><span class="text-span">our
-                                craft</span>
-                        </div><a href="/services" data-w-id="07b5bf2b-c522-8700-8295-6f6d73a4daff" style="opacity:0"
-                            class="button button-pink w-button">View Services</a>
-                    </div>
-                </div>
-        
-        <div id="w-node-_17a3ffb9-d2aa-c6bf-5ad0-e4adb40ce44f-dc178eda" class="hero-video-block">
-            <div data-poster-url="assets/hair_washing_poster.jpg"
-                data-video-urls="assets/hair_washing.mp4,assets/hair_washing.webm" data-autoplay="true" data-loop="true"
-                data-wf-ignore="true" class="video w-background-video w-background-video-atom">
-                <video id="4289ad76-e05e-4382-e9bb-dcde130c8d51-video" autoplay="" loop=""
-                    style="background-image:url(assets/hair_washing_poster.jpg)" muted="" playsinline=""
-                    data-wf-ignore="true" data-object-fit="cover">
-                    <source src="assets/hair_washing.mp4" type="video/mp4" />
-                    <source src="assets/hair_washing.webm" type="video/webm" />
-                </video>
-            </div>
-        </div>
-    </div>
-    </div> -->
         <!-- Blog section starts -->
         <section id="blog" class="section">
             <div class="container w-container">
@@ -163,18 +132,20 @@
                                     <p class="paragraph small-paragraph">12 Jan 2026</p>
                                 </div>
                             </a>
-                            <div id="w-node-b51b1697-95a3-46f7-1aa8-dbeb9ae6f53f-dc178eda" class="card">
+                            <a href="/blogs/latest-gents-haircuts-trending"
+                                id="w-node-b51b1697-95a3-46f7-1aa8-dbeb9ae6f53f-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
-                                    <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
-                                            alt="" class="image" /></div>
+                                    <div class="image-container"><img
+                                            src="/assets/blog/latest-gents-haircuts-trending-thumbnail.webp"
+                                            loading="lazy" alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
                                     <div class="tags margin-bottom-30px">Hairstyles</div>
-                                    <div class="card-title margin-bottom-30px">Top Hair Trends in Bangalore: What’s Hot
-                                        in 2025?</div>
-                                    <p class="paragraph small-paragraph">15 jun 2020</p>
+                                    <div class="card-title margin-bottom-30px">Latest Gents Haircuts That Are Trending
+                                        Right Now</div>
+                                    <p class="paragraph small-paragraph">25 Jan 2026</p>
                                 </div>
-                            </div>
+                            </a>
                             <div id="w-node-_31fa5338-8427-cb64-81c3-549a4c9abdb2-dc178eda" class="card">
                                 <div class="card-image-block margin-bottom-30px">
                                     <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
