--- a/blogs/keratin-vs-hair-botox.html
+++ b/blogs/keratin-vs-hair-botox.html
@@ -157,7 +157,9 @@
                         </nav>
                         <h1 class="heading h3 margin-bottom-40px">Keratin vs Hair Botox: Which Treatment Is Right for
                             Your Hair Type?</h1>
-                        <div class="paragraph small-paragraph subtitle dark-title-grey margin-top-20px">Written by</div>
+                        <div
+                            class="paragraph small-paragraph subtitle dark-title-grey margin-top-20px margin-bottom-20px">
+                            Written by</div>
                         <p class="dark-title paragraph margin-bottom-10px">
                             Mahina Sehrish <br> <span class="paragraph small-paragraph">Sugarcoat Salon,
                                 Bangalore</span>
