--- a/blog.html
+++ b/blog.html
@@ -163,19 +163,19 @@
                                     <p class="paragraph small-paragraph">25 Jan 2026</p>
                                 </div>
                             </a>
-                            <div id="w-node-_31fa5338-8427-cb64-81c3-549a4c9abdb2-dc178eda" class="card">
+                            <a href="/blogs/salon-makeup-vs-diy-makeup.html"
+                                id="w-node-b51b1697-95a3-46f7-1aa8-dbeb9ae6f53f-dc178eda" class="card card-link">
                                 <div class="card-image-block margin-bottom-30px">
-                                    <div class="image-container"><img src="/assets/placeholder-02.webp" loading="lazy"
-                                            alt="" class="image" /></div>
+                                    <div class="image-container"><img src="/assets/blog/salon-makeup-vs-diy-makeup.webp"
+                                            loading="lazy" alt="" class="image" /></div>
                                 </div>
                                 <div class="card-content-block">
                                     <div class="tags margin-bottom-20px">MakeUp</div>
-                                    <div class="card-title margin-bottom-30px">Pre-Bridal to D-Day: Your Ultimate Salon
-                                        Checklist</div>
-                                    <p class="paragraph small-paragraph">12 jun 2020</p>
+                                    <div class="card-title margin-bottom-30px">Salon Makeup vs DIY Makeup: Why
+                                        Professional Makeup Makes a Real Difference</div>
+                                    <p class="paragraph small-paragraph">31 Jan 2026</p>
                                 </div>
-                            </div>
-
+                            </a>
                         </div>
                     </div>
         </section>
