minor alt text changes

--- a/blogs/salon-makeup-vs-diy-makeup.html
+++ b/blogs/salon-makeup-vs-diy-makeup.html
@@ -179,7 +179,7 @@
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/bridal-makeup-at-sugarcoat-salon.webp"
-                                        alt="Keratin Treatment at Sugarcoat Salon" style="opacity:0"
+                                        alt="Bridal Makeup at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
@@ -273,7 +273,7 @@
                             <div class="blog-content grid-images-div">
                                 <div class="image-container"><img class="image portrait"
                                         src="/assets/blog/professional-makeup-at-sugarcoat-salon.webp"
-                                        alt="Botox Treatment at Sugarcoat Salon" style="opacity:0"
+                                        alt="Professional Makeup at Sugarcoat Salon" style="opacity:0"
                                         sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px"
                                         data-w-id="9c8f6dbe-d94f-ed43-1389-e956e65b9afc" loading="lazy" />
                                 </div>
